--- a/htmls/he_advise.html
+++ b/htmls/he_advise.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Возможно, Вам подойдет</h1>
-    <br>
     <h2>{{ he }}</h2>
+    <h3>Точность - {{ accuracy }}%</h3>
 </body>
 </html>
