--- a/htmls/home_page.html
+++ b/htmls/home_page.html
@@ -5,9 +5,54 @@
     <meta charset="UTF-8">
     <title>Home Page</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <style>
+        .centered_buttons {
+            text-align: center;
+                    }
+        button {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            width: 280px;
+            transition-duration: 0.3s;
+                    }
+        button:hover {
+	        background: rgba(0,0,0,0);
+	        color: #4CAF50;
+	        box-shadow: inset 0 0 0 3px #4CAF50;
+                    }
+        a:link {
+            color: black;
+            text-decoration: none;
+        }
+        a:visited {
+            color: black;
+            text-decoration: none;
+        }
+        a:hover{
+            color: #4CAF50;
+        }
+    </style>
 </head>
 <body>
-    <h1>Home Page</h1>
+    <h1>Домашняя страница</h1>
+    <div class="centered_buttons">
+        <button class="custombutton"><a href="{% url 'srch_concept' %}">Поиск понятий</a></button>
+        <br>
+        <br>
+        <button class="custombutton"><a href="{% url 'states_lst' %}">Информация о государствах</a></button>
+        <br>
+        <br>
+        <button class="custombutton"><a href="{% url 'home' %}">Информация о религиях</a></button>
+        <br>
+        <br>
+        <button><a href="{% url 'he_form' %}">Подобрать ВУЗ</a></button>
+    </div>
 
 </body>
 </html>
